'use strict'

const { highlight, highlightAuto } = require('./index')

describe('highlightRTFRenderer', () => {
  it('should render a string', () => {
    const source = 'const a = "foo";'
    const res = highlight('javascript', source)
    expect(res.value).toMatchSnapshot()
  })

  it('should render multiple lines', () => {
    const source = `line1
line2


line5
`
    const res = highlight('javascript', source)
    expect(res.value).toMatchSnapshot()
  })

  it('should encode curly brackets and back slashes', () => {
    const source = `{
    \\ test
    }`
    const res = highlight('javascript', source)
    expect(res.value).toMatchSnapshot()
  })

  it('should not add white spaces', () => {
    const source = `test.then((result) => {
  console.log(result.stdout)
})`
    const res = highlight('javascript', source)
    expect(res.value).toMatchSnapshot()
  })

  it('should render specific styles', () => {
    const source = `
// Comment
function test() {}
`
    const res = highlight('javascript', source, { theme: 'idea' })
    expect(res.value).toMatchSnapshot()
  })

  it('should render javascript', () => {
    const source = `settings.set('user.name', {
  first: 'Cosmo',
  last: 'Kramer'
}).then(() => {
  settings.get('user.name.first').then(val => {
    console.log(val);
    // => 'Cosmo'
  });
});
`
    const res = highlightAuto(source, { theme: 'github' })
    expect(res.value).toMatchSnapshot()
  })
})
